--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -14,6 +14,10 @@ body {
     overflow-x : hidden;
 }
 
+/* * {
+    box-sizing: border-box;
+} */
+
 a {
     text-decoration: none;
     color          : var(--color-text);
@@ -49,14 +53,14 @@ a:hover {
     font-size    : 28px;
     margin-bottom: 30px;
     color        : var(--color-text);
-    width        : 50%;
+    width        : 100%;
 }
 
 .box-head .inner-desc {
     font-size     : 15px;
     margin-bottom : 30px;
     color         : #777777;
-    width         : 50%;
+    width         : 100%;
     letter-spacing: 1px;
 }
 
